# Nhom-16-VXL-He-thong-do-chat-luong-khong-khi

./: CMakeLists.txt  commit_history.txt  sdkconfig  sdkconfig.old
components/app_tasks/: CMakeLists.txt  task_alert.c  task_comms.c  task_display.c  task_power.c  task_process.c  task_sensor.c  task_storage.c
components/app_tasks/include/: app_tasks.h
components/comms/: CMakeLists.txt  mqtt_manager.c  wifi_manager.c
components/comms/include/: comms.h
components/data_processor/: CMakeLists.txt  aqi_calc.c  calibration.c  filter.c
components/data_processor/include/: data_processor.h
components/display_oled/: CMakeLists.txt  idf_component.yml  ssd1306_app.c
components/display_oled/include/: display_oled.h
components/global_defines/include/: app_config.h  global_types.h
components/hardware_drivers/: CMakeLists.txt  bme680_app.c  ds3231.c  idf_component.yml  mq135.c  pms5003.c  sd_card_app.c
components/hardware_drivers/include/: bme680_app.h  ds3231.h  mq135.h  pms5003.h  sd_card_app.h
main/: CMakeLists.txt  main.c
main/include/: AQI_caculator.h  calibration.h  config.h  mqtt_manager.h  outlier_filter.h  sd_storage.h  wifi_manager.h
main/src/: AQI_caculator.c  air_monitor.code-workspace  calibration.c  main.c  mqtt_manager.c  outlier_filter.c  sd_storage.c  sensor_task.c  wifi_manager.c
